# sdapps

./: .dockerignore  .gitignore  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  turbo.json  vitest.config.mts
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  docker-cd.yml  packages-ci.yml  towndex-etl-ci.yml
apps/congress-etl/: cli.ts  package.json
apps/congress-etl-cli/: congress-etl-cli.ts  package.json
apps/prosopa/: package.json
apps/prosopa/app/: layout.tsx
apps/radio/: i18n.ts  next.config.mjs  package.json  tsconfig.json
apps/radio/app/: layout.tsx  page.tsx
apps/radio/lib/: Hrefs.ts  PageMetadata.ts  dataFactory.ts  getSearchEngineJson.ts  objectSet.ts
apps/towndex/: Dockerfile  package.json
apps/towndex-etl/: pyproject.toml  ruff.toml
apps/towndex-etl/script/: format.sh  test.sh
apps/towndex-gui/: Dockerfile  i18n.ts  next.config.mjs  package.json
apps/towndex-gui/app/: layout.tsx  page.tsx
apps/towndex-gui/lib/: Hrefs.ts  PageMetadata.ts  configuration.ts  dataset.ts  serverConfiguration.ts
apps/towndex/lib/: Hrefs.ts  PageMetadata.ts  getHrefs.ts  modelSet.ts  (+3 more)
apps/towndex_etl/: .env.local  guide.txt  mypy.ini  pyproject.toml  ruff.toml
apps/web/: package.json  tsconfig.json
data/congress/: congress.ttl  extract-transform-load.ts
data/npr-composer/: input.ttl  output.ttl
data/towndex/: minutes.trig  town_of_brunswick_meeting_minutes_20250213.json
etl/congress/: cli.ts  package.json
etl/npr-composer/: cli.ts  package.json
etl/towndex/: cli.ts  package.json
(+1224 files in other folders)
