[tool.poetry]
name = "towndex-etl"
version = "0.1.0"
description = "An ETL system to build knowledge graphs for Towndex."
authors = ["imlapps"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-openai = "^0.3.8"
langchain-community = "^0.3.19"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.0"
pytest = "^8.3.5"
isort = "^6.0.1"
tee = "^0.0.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
